--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@ http://www.w3.org/2001/XMLSchema-instance ">
     <groupId>cn.hn</groupId>
     <artifactId>JavaGC</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
     <dependencies>
